--- a/app/views/resetpassword.html
+++ b/app/views/resetpassword.html
@@ -9,50 +9,50 @@
                 <div ng-show="showerror" class="col-md-12 no-padding-hr">
                     <span style="color:#EF5F5F">{{errormessage}}</span>
                 </div>
-                <form name="ressetpasswordFrom" role="form" ng-submit="ressetpasswordFrom.$valid && false"  class="login_container">
-                    <div class="row form-group">
-                        <div class="col-md-12">
-                            <input type="text" class="form-control" name="otp" placeholder="Enter Otp" ng-model="user.otp" mobile-validation maxlength="6" required="required">
+                <form name="ressetpasswordFrom" role="form" class="login_container">
+                    <div class="row form-group no-margin-hr">
+                        <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr">
+                            <span class="astrick glyphicon glyphicon-asterisk resetpasswordAshtrick"></span>
+                            <input type="text" class="form-control" name="otp" placeholder="Enter Otp" 
+                            ng-model="user.otp" mobile-validation maxlength="6">
                         </div>
                     </div>
-                    <div class="row" ng-show="ressetpasswordFrom.otp.$dirty && ressetpasswordFrom.otp.$error">
-                        <div class="col-md-12 form-group" ng-show="ressetpasswordFrom.otp.$invalid">
-                            <div class="col-md-12 no-padding-hr">
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$error.required">Please enter otp</span>
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$invalid && !ressetpasswordFrom.otp.$error.required">Please enter valid Otp</span>
-                            </div>
+                    
+                    <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr form-group" ng-show="otperror">
+                        <span style="color:#EF5F5F">{{otperrormsg}}</span>
+                        <!-- <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.otp.$invalid && !ressetpasswordFrom.otp.$error.required">Please enter valid Otp</span> -->
+                    </div>
+                    
+                    <div class="row form-group no-margin-hr">
+                        <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr">
+                            <span class="astrick glyphicon glyphicon-asterisk resetpasswordAshtrick"></span>
+                            <input type="password" class="form-control" ng-model="user.pwd" 
+                            name="password" id="password" placeholder="Enter password">
                         </div>
                     </div>
-                    <div class="row form-group">
-                        <div class="col-md-12">
-                            <input type="password" class="form-control" ng-model="user.pwd" name="password" id="password" placeholder="Enter password" ng-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).*$/" required="required" ng-minlength="4" ng-change="editingfields()">
+                  
+                    <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr form-group" ng-show="passworderror">
+                        <span style="color:#EF5F5F" >{{passworderrormsg}}</span>
+                        <!-- <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.password.$invalid && !ressetpasswordFrom.password.$error.required">Password should consists of atleaset one uppercase letter and one lowercase letter and one number</span> -->
+                    </div>
+                   
+                    <div class="row form-group no-margin-hr">
+                        <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr">
+                            <span class="astrick glyphicon glyphicon-asterisk resetpasswordAshtrick"></span>
+                            <input type="password" class="form-control" ng-model="user.confirm_password" 
+                            name="confirmpassword" id="confirmpassword" placeholder="Enter confirm password" 
+                             ng-change="editingfields()">
                         </div>
                     </div>
-                    <div class="row" ng-show="ressetpasswordFrom.password.$dirty && ressetpasswordFrom.password.$error">
-                        <div class="col-md-12 form-group" ng-show="ressetpasswordFrom.password.$invalid">
-                            <div class="col-md-12 no-padding-hr">
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.password.$error.required">Please enter password</span>
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.password.$invalid && !ressetpasswordFrom.password.$error.required">Password should consists of atleaset one uppercase letter and one lowercase letter and one number</span>
-                            </div>
-                        </div>
+                    
+                    <div class="col-md-12 col-xs-12 col-sm-12 no-padding-hr form-group" ng-show="confirmpassworderror">
+                        <span style="color:#EF5F5F" >{{confirmpassworderrormsg}}</span>
+                        <!-- <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.confirmpassword.$invalid && !ressetpasswordFrom.confirmpassword.$error.required">Password should consists of atleaset one uppercase letter and one lowercase letter and one number</span> -->
                     </div>
-                    <div class="row form-group">
-                        <div class="col-md-12">
-                            <input type="password" class="form-control" ng-model="user.confirm_password" name="confirmpassword" id="confirmpassword" placeholder="Enter confirm password" ng-pattern="/^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).*$/" required="required" ng-minlength="4"
-                                ng-change="editingfields()">
-                        </div>
-                    </div>
-                    <div class="row" ng-show="ressetpasswordFrom.confirmpassword.$dirty && ressetpasswordFrom.confirmpassword.$error">
-                        <div class="col-md-12 form-group" ng-show="ressetpasswordFrom.confirmpassword.$invalid">
-                            <div class="col-md-12 no-padding-hr">
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.confirmpassword.$error.required">Please enter confirm password</span>
-                                <span style="color:#EF5F5F" ng-show="ressetpasswordFrom.confirmpassword.$invalid && !ressetpasswordFrom.confirmpassword.$error.required">Password should consists of atleaset one uppercase letter and one lowercase letter and one number</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 text-center">
-                            <button type="submit" class="btn login-button background-defalt" ng-disabled="ressetpasswordFrom.otp.$invalid || ressetpasswordFrom.password.$invalid || ressetpasswordFrom.confirmpassword.$invalid" ng-click="resetpasswords()">Reset password</button>
+                  
+                    <div class="row form-group no-margin-hr">
+                        <div class="col-md-12 text-center no-padding-hr">
+                            <button type="submit" class="btn login-button background-defalt"  ng-click="resetpasswords()">Reset password</button>
                         </div>
                     </div>
                 </form>
