--- a/app/views/login.html
+++ b/app/views/login.html
@@ -12,7 +12,7 @@
                 <form name="loginForm" role="form" ng-submit="loginForm.$valid && false" novalidate class="login_container">
                     <div class="row form-group">
                         <div class="col-md-12 col-xs-12 col-sm-12">
-                            <input type="text" class="form-control" name="mobile" placeholder="Enter Mobile Number" autofocus ng-model="user.mobile" required="required" ng-change="editingfields()"  maxlength="10" ng-blur="validationsonblur(user.mobile)" mobile-validation>
+                            <input type="text" class="form-control" name="mobile" placeholder="Enter Mobile Number" autofocus ng-model="user.mobile" required="required" ng-change="editingfields()"  maxlength="10" mobile-validation>
                         </div>
                     </div>
                     <div ng-show="mobilenumbererror" class="col-md-12 no-padding-hr form-group">
@@ -20,7 +20,7 @@
                     </div>
                     <div class="row form-group">
                         <div class="col-md-12 col-xs-12 col-sm-12">
-                            <input type="{{passwordtext}}" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Enter password" required="required" ng-minlength="4" ng-change="editingfields()" ng-blur="validationpasswordblur(user.password)">
+                            <input type="{{passwordtext}}" class="form-control" ng-model="user.password" name="password" id="password" placeholder="Enter password" required="required" ng-minlength="4" ng-change="editingfields()">
                             <span class="glyphicon glyphicon-eye-open pull-right eye-icon-position-login" ng-click="showPassword()" ng-if="passwordtext==='password'"></span>
                             <span class="glyphicon glyphicon-eye-close pull-right eye-icon-position-login" ng-click="showPassword()" ng-if="passwordtext==='text'"></span>
                         </div>
@@ -51,8 +51,10 @@
         </div>
     </div>
 </div>
+<div class="alert  alert-position-success" id="success-alert" style="display:none;">
+    <strong>{{msg}}</strong>
+</div>
 <div ng-show="loading" class="load text-center">
     <img class="spinner" src="images/ajax-loader.gif" width="60" height="60">
     <h4 class="loading_msg">Loading Please Wait...</h4>
 </div>
-<message-alert></message-alert>
