--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -104,4 +104,6 @@
     <img class="spinner" src="images/ajax-loader.gif" width="60" height="60">
     <h4 class="loading_msg">Loading Please Wait...</h4>
 </div>
-<message-alert></message-alert>
+<div class="alert alert-position-success" id="success-alert" style="display:none;">
+        <strong>{{msg}}</strong>
+</div>
