--- a/app/views/vouchersettings.html
+++ b/app/views/vouchersettings.html
@@ -440,6 +440,9 @@
         </div>
     </div>
 </div>
+<div class="alert  alert-position-success" id="success-alert" style="display:none;">
+    <strong>{{msg}}</strong>
+</div>
 
 <div ng-show="loading " class="load text-center ">
     <img class="spinner " src="images/ajax-loader.gif " width="60 " height="60 ">
